showing of clasters was corrected

--- a/TODO/TODO
+++ b/TODO/TODO
@@ -2,3 +2,10 @@
 
 Разобраться с юзерами и ролями.
 
+Придумать нормальное геокодирование, чтобы распознавало адреса типа "выезд из города ...".
+
+Сделать, чтобы простой юзер не мог добавить объект от имени другого.
+
+Сделать галерею.
+
+В галерее должно отображаться столько мест для фоток, сколько фоток, если фоток не больше пяти.
