--- a/TODO/TODO
+++ b/TODO/TODO
@@ -9,3 +9,12 @@
 Сделать галерею.
 
 В галерее должно отображаться столько мест для фоток, сколько фоток, если фоток не больше пяти.
+
+------------------------------------------------------
+
+Регистрация.
+
+Справа в меня отобразается кнопка "войти". При нажатии выпадает окошко с полями для ввода логина-пароля,
+ниже кнопки соц. сетей и кнопка регистрации.
+Если пользователь залогинен, вместо "войти" отображается ник пользователя или имя. При нажатии выпадает
+окно с кнопками профиль, выйти.
