another ancillary commit between workdays

--- a/TODO/TODO
+++ b/TODO/TODO
@@ -18,3 +18,12 @@
 ниже кнопки соц. сетей и кнопка регистрации.
 Если пользователь залогинен, вместо "войти" отображается ник пользователя или имя. При нажатии выпадает
 окно с кнопками профиль, выйти.
+
+------------------------------------------------------
+
+По меню.
+
+Нужно, чтобы при загрузке в первый раз загружался только индексный файл, блоки меню должны подгружаться
+через ajax.
+
+------------------------------------------------------
